--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			background-color: #606060;
 		}
 		#corpo {
-			width: 90%;
+			margin: 10%
 			background-color: white;
 			padding: 10px;
 		}
