--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			background-color: #606060;
 		}
 		#corpo {
-			margin: 10%
+			width: 90%;
+			margin: 5%;
 			background-color: white;
 			padding: 10px;
 		}
