--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 		}
 		#corpo {
 			width: 90%;
-			margin: 5%;
+			margin-left: 3%;
+			margin-right: 7%;
 			background-color: white;
 			padding: 10px;
 		}
